--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "dependencies": {
     "bcfg": "^0.1.6",
     "blessed": "^0.1.81",
-    "blessed-contrib": "^4.8.12"
+    "blessed-contrib": "^4.8.12",
+    "netroute": "github:indutny/node-netroute#cc271e379afc4faf48b4d4295d68dd38e5d6b224"
   },
   "devDependencies": {
     "bmocha": "^2.1.0",
