--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,7 @@ build:
     - docker push "$CI_REGISTRY_IMAGE$BRANCH:latest"
     # Publish to dockerhub
     - >
-        if [ "$CI_COMMIT_REF_NAME" == "master" ]; then
+        if [ "$CI_COMMIT_REF_NAME" == "master" ] || [ ! -z "$CI_COMMIT_TAG" ]; then
         docker login -u "$DOCKERHUB_LOGIN" -p "$DOCKERHUB_PASSWORD";
         docker tag "$CI_REGISTRY_IMAGE$BRANCH:latest" thann/pingg;
         docker push thann/pingg; fi
