Fix another stupid

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,13 +42,13 @@ release:
     - docker run --name=release --entrypoint sh "$CI_REGISTRY_IMAGE:$CI_COMMIT_TAG" -c "npm install pkg; /app/node_modules/.bin/pkg . -t node10-macos,node10-win"
     - mkdir public
     # Build release binaries
-    - docker cp release:/app/pingg-macos "public/ping-${CI_COMMIT_TAG}-macos"
-    - docker cp release:/app/pingg-win.exe "public/ping-${CI_COMMIT_TAG}-win.exe"
+    - docker cp release:/app/pingg-macos "public/pingg-${CI_COMMIT_TAG}-macos"
+    - docker cp release:/app/pingg-win.exe "public/pingg-${CI_COMMIT_TAG}-win.exe"
     - apk add --no-cache curl
     # Publish release
     - >
         curl --header 'Content-Type: application/json' --header "PRIVATE-TOKEN: ${RELEASE_KEY}"
-        --data "{ \"name\": \"Version ${CI_COMMIT_TAG}\", \"tag_name\": \"${CI_COMMIT_TAG}\", \"description\": \"${CI_COMMIT_MESSAGE}\", \"assets\": { \"links\": [{ \"name\": \"MacOS download\", \"url\": \"${CI_JOB_URL}/artifacts/raw/public/ping-${CI_COMMIT_TAG}-macos?inline=false\" },{ \"name\": \"Windows download\", \"url\": \"${CI_JOB_URL}/artifacts/raw/public/ping-${CI_COMMIT_TAG}-win.exe?inline=false\" }] } }"
+        --data "{ \"name\": \"Version ${CI_COMMIT_TAG}\", \"tag_name\": \"${CI_COMMIT_TAG}\", \"description\": \"${CI_COMMIT_MESSAGE}\", \"assets\": { \"links\": [{ \"name\": \"MacOS download\", \"url\": \"${CI_JOB_URL}/artifacts/raw/public/pingg-${CI_COMMIT_TAG}-macos?inline=false\" },{ \"name\": \"Windows download\", \"url\": \"${CI_JOB_URL}/artifacts/raw/public/pingg-${CI_COMMIT_TAG}-win.exe?inline=false\" }] } }"
         --request POST "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/releases"
   artifacts:
     paths:
