--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,7 @@ before_script:
 
 build:
   stage: build
+  except: [tags]
   tags:
     - docker
   script:
@@ -22,12 +23,12 @@ build:
     - docker push "$CI_REGISTRY_IMAGE$BRANCH:latest"
     # Publish tag
     - >
-        if [ ! -z "$CI_COMMIT_TAG" ]; then
+      if [ ! -z "$CI_COMMIT_TAG" ]; then
         docker tag "$CI_REGISTRY_IMAGE$BRANCH:latest" "$CI_REGISTRY_IMAGE:$CI_COMMIT_TAG";
         docker push "$CI_REGISTRY_IMAGE:$CI_COMMIT_TAG"; fi
     # Publish to dockerhub
     - >
-        if [ -z "$BRANCH" ] && [ ! -z "$DOCKERHUB_PASSWORD" ]; then
+      if [ -z "$BRANCH" ] && [ ! -z "$DOCKERHUB_PASSWORD" ]; then
         docker login -u "$DOCKERHUB_LOGIN" -p "$DOCKERHUB_PASSWORD";
         docker tag "$CI_REGISTRY_IMAGE$BRANCH:latest" thann/pingg;
         docker push thann/pingg; fi
@@ -48,7 +49,7 @@ release:
     # Publish release
     - |
       curl --fail --output "/dev/null" --silent --show-error --write-out "HTTP response: ${http_code}\n\n" \
-        --data "{\"tag_name\": \"${CI_COMMIT_TAG}\", \"name\": \"${CI_PROJECT_NAME} - ${CI_COMMIT_TAG}\", \"description\": \"${CI_COMMIT_TAG_MESSAGE:-Automated release.}\", \"assets\": { \"links\": [{ \"name\": \"MacOS download\", \"url\": \"${CI_JOB_URL}/artifacts/raw/public/pingg-${CI_COMMIT_TAG}-macos?inline=false\" },{ \"name\": \"Windows download\", \"url\": \"${CI_JOB_URL}/artifacts/raw/public/pingg-${CI_COMMIT_TAG}-win.exe?inline=false\" }] } }" \
+        --data "{\"tag_name\": \"${CI_COMMIT_TAG}\", \"name\": \"${CI_PROJECT_NAME} - ${CI_COMMIT_TAG}\", \"description\": \"${CI_COMMIT_MESSAGE:-Automated release}\", \"assets\": { \"links\": [{ \"name\": \"MacOS download\", \"url\": \"${CI_JOB_URL}/artifacts/raw/public/pingg-${CI_COMMIT_TAG}-macos?inline=false\" },{ \"name\": \"Windows download\", \"url\": \"${CI_JOB_URL}/artifacts/raw/public/pingg-${CI_COMMIT_TAG}-win.exe?inline=false\" }] } }" \
         --header "Content-Type: application/json" \
         --header "Private-Token: ${RELEASE_KEY}" \
         --request POST \
