Fix blessed issue with pkg
From :https://github.com/zeit/pkg/issues/530

--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "bmocha": "^2.1.2",
     "eslint": "^5.16.0"
   },
+  "pkg": {
+    "assets": "node_modules/blessed/**/*"
+  },
   "keywords": [
     "monitor",
     "blessed"
